# test_qqc2hello

./: CMakeLists.txt  main.qml  ru.minlexx.qqc2hello.json  test_flatpak.sh  test_qqc2hello.pro
